# sumo-rl-mixed-traffic

./: .gitignore  CLAUDE.md  README.md  REFACTOR_PLAN.md  agent.py  config.py  env.py  eval_policy.py  main.py  mkdocs.yml  pyproject.toml  traci_control.py  train.py  utils.py
.github/workflows/: ci.yml  docs.yml
configs/: road.net.xml  routes.rou.xml  simulation.sumocfg
configs/ring/: circle.con.xml  circle.edg.xml  circle.net.xml  circle.netccfg  circle.nod.xml  circle.rou.xml  circle.tll.xml  platoon_9.rou.xml  platoon_9.sumocfg  simulation.sumocfg
deep_lcc_results/: nnmpc.pth
docs/: algorithms.md  deep-lcc-dataset.md  deep_lcc_progress.md  index.md  lagrangian-ppo.md  ppo-refactor.md  problem.md  reward-redesign.md
docs/exploration/: lagrangian_ppo_reward_tuning.md
docs/superpowers/plans/: 2026-04-27-rlmpc-warm-rl-residual.md
docs/superpowers/specs/: 2026-04-27-rlmpc-warm-rl-residual-design.md
latest/: 404.html  index.html
latest/algorithms/: index.html
latest/deep-lcc-dataset/: index.html
latest/deep_lcc_progress/: index.html
latest/exploration/lagrangian_ppo_reward_tuning/: index.html
latest/lagrangian-ppo/: index.html
latest/ppo-refactor/: index.html
latest/problem/: index.html
latest/reward-redesign/: index.html
latest/search/: search_index.json
rl_mixed_traffic/: README.md  agent.py  config.py  dqn_eval.py  dqn_train.py  env.py  eval_policy.py  lagrangian_ppo_eval.py  lagrangian_ppo_train.py  ppo_eval.py  ppo_train.py  q_eval_policy.py  q_train.py  train.py
rl_mixed_traffic/agents/: base_agent.py  dqn_agent.py  ppo_agent.py  q_agent.py
rl_mixed_traffic/conf/: dqn_train.yaml  lagrangian_ppo_train.yaml  ppo_train.yaml  q_train.yaml
rl_mixed_traffic/configs/: dqn_config.py  ppo_config.py  q_config.py
rl_mixed_traffic/deep_lcc/: config.py  eval_classical.py  eval_failure_modes.py  eval_idm_baseline.py  eval_idm_core.py  eval_idm_delay_sweep.py  failure_scenarios.py  generate_dataset.py  hankel.py  idm.py  measurement.py  nnmpc_actor_critic.py  nnmpc_config.py  nnmpc_eval.py  nnmpc_network.py  nnmpc_train.py  ovm.py  precollect.py  qp_solver.py  rlmpc_config.py  rlmpc_env.py  rlmpc_eval.py  rlmpc_head_controller.py  rlmpc_train.py
rl_mixed_traffic/dqn/: dqn_agent.py  network.py  replay_mem.py  reply_mem.py
rl_mixed_traffic/env/: discretizer.py  head_vehicle_controller.py  reward.py  ring_env.py  safety_layer.py  scenario.py  wrappers.py
rl_mixed_traffic/output/: q_table.pkl  returns.csv
rl_mixed_traffic/ppo/: network.py  rollout_buffer.py
rl_mixed_traffic/scripts/: classic_controller.py
rl_mixed_traffic/utils/: plot_utils.py  reward.py  sumo_utils.py
tests/: test_compute_lcc_reward.py  test_discretizer.py  test_emergency_braking.py  test_failure_scenarios.py  test_hankel.py  test_head_vehicle_controller.py  test_idm.py  test_network.py  test_nnmpc_actor_critic.py  test_ovm.py  test_ppo_agent.py  test_qp_solver.py  test_rlmpc_env.py  test_rlmpc_head_controller.py  test_run_with_state_extensions.py  test_safety_layer.py  test_scenario.py  test_wrappers.py
(+2 files in other folders)
