[project]
dependencies = [
  "numpy>=1.24.0",
  "gymnasium>=0.29.0",
  "matplotlib>=3.10.7",
  "torch>=2.9.0",
  "ffmpeg-python>=0.2.0",
  "tqdm>=4.67.1",
]
description = "Add your description here"
name = "sumo-rl-mixed-traffic"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[project.optional-dependencies]
dev = ["pytest", "ruff", "pytest-cov"]
