[project]
dependencies = [
  "numpy>=1.24.0",
  "gymnasium",
  "matplotlib>=3.10.7",
  "tqdm",
  "hydra-core>=1.3.2",
  "ipython>=9.10.0",
  "torch>=2.6.0",
  "click>=8.0",
]
description = "Add your description here"
name = "sumo-rl-mixed-traffic"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.uv.sources]                                                                                                                                              
torch = [                                                                                                                                                      
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },                                                                                           
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin' or sys_platform == 'win32'" },                                                                 
]                                                                                                                                                              

[[tool.uv.index]]                                                                                                                                              
name = "pytorch-cu126"                                                                                                                                         
url = "https://download.pytorch.org/whl/cu126"                                                                                                                 
explicit = true
                                                                                                                                                                 
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.optional-dependencies]
dev = ["pytest", "ruff", "pytest-cov"]
docs = [
    "mkdocs-material",
    "mike",
]
